--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,3 +21,5 @@ services:
     volumes:
       - ./crawler/image/testing_scripts:/testing_scripts
       - ~/stock-data:/data
+      - ./web/app:/app
+
