fix sueprvisor config

--- a/web/image/etc/supervisor/supervisord.conf
+++ b/web/image/etc/supervisor/supervisord.conf
@@ -1,3 +1,8 @@
+[supervisord]
+nodaemon=true
+
+[supervisorctl]
+
 [program:tornado-app]
 priority=10
 directory=/app
@@ -8,3 +13,4 @@ autorestart=true
 stopsignal=QUIT
 stdout_logfile=/var/log/tornado-app.log
 redirect_stderr=true
+
